--- a/web/public/index.html
+++ b/web/public/index.html
@@ -10,10 +10,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Bibinto website. Macula Inc."
-    />
+    <meta name="description" content="Bibinto website. Macula Inc." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/bibinto.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
